--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,5 @@
 # Commonly used screens these days easily fit more than 80 characters.
 Metrics/LineLength:
   Max: 120
+Documentation:
+  Enabled: false
